remove usages of commons lang 2
replace with native java